2017-01-02  Markus Gans  <guru.mail@muenster.de>
	* The new FScrollView widget provides a scrollable viewport 
	  to change the area of interest
	* The scrollview example illustrates the use of FScrollView class

2016-12-28  Markus Gans  <guru.mail@muenster.de>
	* Reduce public methods in FVTerm

2016-12-27  Markus Gans  <guru.mail@muenster.de>
	* Avoid non-working tab-cursor-movements on Linux terminals
	  with activated PC or VT100 encoding

2016-12-26  Markus Gans  <guru.mail@muenster.de>
	* Add the ability to stream text into a widget's virtual window
	  with print() << '#' << 5; or *this << ...

2016-12-22  Markus Gans  <guru.mail@muenster.de>
	* VTerm marks printed characters for a correct determination 
	  of unchanged characters
	* Correct gpm detection in configure script

2016-12-18  Markus Gans  <guru.mail@muenster.de>
	* Only perform VTerm updates on terminal updates
	* Skipping the print of characters without changes
	* Combined scrollAreaForward and scrollAreaReverse 
	  with terminal scroll sequences

2016-12-15  Markus Gans  <guru.mail@muenster.de>
	* Reduce the character output by using character erase 
	  and character repeat

2016-12-11  Markus Gans  <guru.mail@muenster.de>
	* Accelerates text line drawing by clear with CSI sequences 
	  to begin or to end of the current line.

2016-11-29  Markus Gans  <guru.mail@muenster.de>
	* Restore the xterm window title and font 
	  only if it could be read before

2016-11-27  Markus Gans  <guru.mail@muenster.de>
	* Some minor bug fixes
	* Version 0.3.0

2016-11-26  Markus Gans  <guru.mail@muenster.de>
	* Improvements for ansi terminal emulators
	* Add the opti-move test program
	* Optimized the terminal clear screen

2016-11-20  Markus Gans  <guru.mail@muenster.de>
	* Increase speed on cygwin terminals
	* Improve tty settings

2016-11-13  Markus Gans  <guru.mail@muenster.de>
	* Do not draw shadows on a Linux console if not 
	  all characters are available

2016-11-12  Markus Gans  <guru.mail@muenster.de>