@@ -1,3 +1,6 @@
+2017-01-03  Markus Gans  <guru.mail@muenster.de>
+	* FScrollView now has on-demand scroll bars
+
 2017-01-02  Markus Gans  <guru.mail@muenster.de>
 	* The new FScrollView widget provides a scrollable viewport 
 	  to change the area of interest
